# polyaxon

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .prospector.yaml  .pyup.yml  .travis.yml  ACKNOWLEDGEMENTS  ACKNOWLEDGMENTS  CITATION  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  DockerfileDev  LICENCE  LICENSE  MANIFEST.in  Makefile  PROJECT  README.md  SECURITY.md  best_models.py  categories.json  confusables.json  data_processing.py  deployment.md  docker-compose.testing.yml  docker-compose.yml  download_data.py  generate_doc.py  go.mod  go.sum  latest_helper.yml  lstm.ipynb  lstm.py  lstm_sin.ipynb  lstm_sin_cos.ipynb  (+34 more)
core/: MANIFEST.in  polyaxon-complete.sh  pytest.ini  setup.cfg  setup.py
core/polyaxon/: __main__.py  api.py  constants.py  dist.py  exceptions.py  lifecycle.py  live_state.py  logger.py  main.py  pkg.py  settings.py  types.py
core/polyaxon/agents/: agent.py  base.py  converter.py  manager.py
core/polyaxon/auxiliaries/: __init__.py  cleaner.py  default_scheduling.py  init.py  notifier.py  sidecar.py  tuner.py
core/polyaxon/builds/: builder.py
core/polyaxon/cli/: admin.py  artifacts.py  auth.py  check.py  completion.py  components.py  config.py  dashboard.py  errors.py  hub.py  init.py  models.py  operations.py  options.py  port_forward.py  project_versions.py  projects.py  registry.py  run.py  session.py  upload.py  utils.py  version.py
core/polyaxon/client/: __init__.py  client.py  hub.py  impersonate.py  init.py  project.py  run.py
core/polyaxon/config_reader/: manager.py  reader.py  spec.py  utils.py
core/polyaxon/connections/: base.py  getter.py  kinds.py  reader.py
core/polyaxon/constants/: globals.py  metadata.py
core/polyaxon/containers/: __init__.py  containers.py  contexts.py  names.py  pull_policy.py  statuses.py
core/polyaxon/contexts/: keys.py  params.py  paths.py  refs.py  sections.py
core/polyaxon/deploy/: reader.py
core/polyaxon/env_vars/: keys.py
core/polyaxon/fs/: async_manager.py  azure.py  fs.py  gcs.py  manager.py  s3.py  tar.py  types.py  watcher.py
core/polyaxon/init/: artifacts.py  auth.py  dockerfile.py  file.py  git.py  tensorboard.py
core/polyaxon/k8s/: async_manager.py  constants.py  events.py  k8s_schemas.py  manager.py  monitor.py  namespace.py  nodes.py  pods.py
core/polyaxon/managers/: agent.py  auth.py  base.py  cli.py  client.py  compose.py  deploy.py  git.py  ignore.py  project.py  proxies.py  run.py  user.py
core/polyaxon/metadata/: keys.py
core/polyaxon/notifiers/: __init__.py  base.py  discord_webhook.py  hipchat_webhook.py  keys.py  mattermost_webhook.py  pagerduty_webhook.py  slack_webhook.py  spec.py  webhook.py
core/polyaxon/operations/: __init__.py  cleaner.py  notifier.py  tuner.py
core/polyaxon/parser/: constants.py  parser.py
core/polyaxon/plugins/: sentry.py
core/polyaxon/polyaxonfile/: __init__.py  check.py  manager.py  params.py
core/polyaxon/polyboard/: artifacts.py  events.py  logging.py
core/polyaxon/polyflow/: __init__.py  cloning_strategy.py  operators.py  trigger_policies.py
core/polyaxon/polyplot/: __init__.py  run_plot.py
core/polyaxon/polypod/: contexts.py  mixins.py
core/polyaxon/polytune/: iteration_lineage.py
core/polyaxon/pql/: builder.py  manager.py  parser.py
core/polyaxon/schemas/: __init__.py  base.py  patch_strategy.py  pending.py  services.py  utils.py
core/polyaxon/services/: auth.py  ephemeral.py  headers.py  values.py
core/polyaxon/sidecar/: __init__.py  ignore.py  intervals.py  processor.py
core/polyaxon/stores/: async_manager.py  base_store.py  local_store.py  manager.py  polyaxon_store.py
core/polyaxon/tracking/: __init__.py  run.py
core/polyaxon/utils/: bool_utils.py  cache.py  cached_property.py  cli_constants.py  click_utils.py  cmd.py  code_reference.py  constants.py  coroutine.py  csv_utils.py  date_utils.py  dict_utils.py  encoding.py  enums_utils.py  env.py  formatting.py  fqn_utils.py  hashing.py  host_utils.py  http.py  http_utils.py  humanize.py  imports.py  indentation.py  list_utils.py  log_levels.py  manager_interface.py  memoize_decorators.py  np_utils.py  path_utils.py  query_params.py  requests_utils.py  sanitizers.py  serialization.py  signal_decorators.py  string_utils.py  test_utils.py  tz_utils.py  units.py  upload.py  (+5 more)
core/requirements/: dev.txt  master.txt  prod.txt  requirements-dev.txt  requirements-test.txt  requirements.txt
core/tests/: conftest.py  utils.py
core/tests/test_agents/: test_agent.py  test_async_spawner.py  test_spawner.py
core/tests/test_api/: test_authentication.py  test_log_handler.py  test_user.py
core/tests/test_builds/: test_builder.py  test_dockerfile_generator.py
core/tests/test_cli/: test_artifacts.py  test_auth.py  test_check.py  test_components.py  test_config.py  test_docker.py  test_hub.py  test_models.py  test_operations.py  test_projects.py  test_registry.py  test_version.py  utils.py
core/tests/test_client/: test_impersonate.py  test_polyaxon_client.py  test_run_client.py  test_statuses.py
core/tests/test_config_reader/: test_manager.py  test_reader.py
core/tests/test_connections/: test_polyaxon_store.py  test_reader.py
core/tests/test_deploy/: test_celery.py  test_deployment.py  test_email.py  test_ingress.py  test_intervals.py  test_rbac.py  test_security_context.py  test_service.py  test_ssl.py  test_user.py
core/tests/test_init/: test_init_auth.py  test_init_code.py
core/tests/test_k8s/: fixtures.py  test_crd.py  test_monitors.py
core/tests/test_lifecycles/: test_lifecycle.py
core/tests/test_managers/: test_agent.py  test_auth.py  test_base.py  test_cli.py  (+7 more)
hypertune/: MANIFEST.in  setup.cfg  setup.py
hypertune/hypertune/: __init__.py  iteration_lineage.py  logger.py  pkg.py
hypertune/requirements/: dev.txt
hypertune/tests/: test_bo.py  test_grid_search.py  test_hyperband.py  test_hyperopt_search.py  test_kinds.py  test_mapping.py  test_random_search.py
platform/coreapi/: Dockerfile.dev  setup.cfg  setup.py
platform/coredb/: manage.py  settings.py  setup.cfg  setup.py
(+17260 files in other folders)
