[metadata]
description-file = README.md

[pytest]
addopts = --doctest-glob='*.rst'
python_paths = ./polyaxon


[isort]
line_length = 100
lines_between_types = 1
order_by_type = true
known_future_library = future,pies
known_standard_library = httpretty,faker,numpy,pandas,six,requests,websocket,jinja2,yaml,pytz
known_third_party = rest_framework
known_first_party = polyaxon_schemas,polyaxon_k8s,polyaxon_gpustat
indent = '    '
multi_line_output = 3
known_django = django
default_section = FIRSTPARTY
sections = FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER
