[metadata]
description-file = README.md

[isort]
line_length = 88
lines_between_types = 1
order_by_type = true
known_future_library = future,pies
known_standard_library = httpretty,faker,numpy,pandas,six,requests,websocket,jinja2,yaml,pytz
;known_third_party =
known_first_party = polyaxon
indent = '    '
multi_line_output = 3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
known_django = django
forced_separate = django.contrib,django.utils
default_section = THIRDPARTY
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
