[metadata]
description-file = README.md

[isort]
honor_noqa = True
profile = black
line_length = 88
lines_between_sections = 1
lines_between_types = 1
order_by_type = true
known_future_library = future,pies
extra_standard_library = typing,mock,pytest,factory,faker,flaky,numpy,pandas,requests,websocket,jinja2,yaml,pytz
known_third_party = rest_framework,scipy,sklearn,datadog,docker,corsheaders,httpretty,celery,picklefield,sentry_sdk,ujson,marshmallow
known_first_party = polyaxon
indent = '    '
multi_line_output = 3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
known_django = django
forced_separate = django.contrib,django.utils
default_section = THIRDPARTY
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
addopts = --doctest-glob='*.rst'
markers =
    api_mark
    automl_mark
    api_builds
    cli_mark
    client_mark
    managers_mark
    operators_mark
    polyaxonfile_mark
    polyflow_mark
    components_mark
    connections_mark
    workflow_mark
    container_mark
    environment_mark
    init_mark
    mounts_mark
    ops_mark
    sidecars_mark
    termination_mark
    schemas_mark
    proxies_mark
    sidecar_mark
    tracking_mark
    polytune_mark
    parser_mark
    polypod_mark
    agent_mark
    polyboard_mark
    plugins_mark
    hooks_mark
    events_mark
