[metadata]
description-file = README.md

[tool:pytest]
addopts = --doctest-glob='*.rst'
python_paths = ./coredb
django_find_project = False
markers =
    serializers_mark
    projects_resources_mark


[isort]
line_length = 88
lines_between_types = 1
order_by_type = True
known_future_library = future,pies
known_standard_library = httpretty,faker,numpy,pandas,requests,websocket,jinja2,yaml,pytz
known_third_party =
known_first_party = polyaxon,coredb,polycommon,tests
indent = '    '
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses=True
default_section = FIRSTPARTY
sections = FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER
